hphp/hack/test/typecheck/parse_int_with_underscore_bad6.php.exp
File "parse_int_with_underscore_bad6.php", line 5, characters 18-21:
Encountered unexpected token `_b12`. (Parsing[1002])
